# vetrix

./: .gitignore  meson.build
src/: arithmetics.c  expression_tree.c  expression_tree.h  main.c  matrix.c  matrix.h  stack.c  stack.h  vector2d.c  vector2d.h
